# grobl

./: .gitignore  .grobl.config.json  .grobl.config.toml  .grobl.toml  .groblignore  .sourcery.yaml  AGENTS.md  CHANGELOG.md  ISSUES.md  README.md  SPEC.md  SPEC_COMPLIANCE.md  STATUS.md  TODO.md  USABILITY.md  cov.xml  import-linter.toml  justfile  mkdocs.yml  pyproject.toml  ruff.default.toml
docs/: configuration.md  index.md  usage.md
grobl/: .grobl.toml  CHANGELOG.md  README.md  config.json  main.py  pyproject.toml
grobl-cli/: README.md  pyproject.toml
grobl-cli/src/grobl_cli/: __init__.py  output.py  tty.py
grobl-cli/src/grobl_cli/cli/: __init__.py  completions.py  init.py  root.py  scan.py  version.py
grobl-cli/src/grobl_cli/service/: prompt.py  scan_runner.py
grobl-cli/tests/: __init__.py  test_grobl_cli.py  test_output_precedence.py  test_service_prompt.py  test_service_scan_runner.py
grobl-cli/tests/integration/: __init__.py  test_integration_cli.py
grobl-cli/tests/system/: __init__.py
grobl-cli/tests/unit/: __init__.py  test_unit_cli.py  test_unit_output.py  test_unit_prompt.py  test_unit_scan_runner.py
grobl-config/: pyproject.toml
grobl-config/src/grobl_config/: __init__.py  config.py
grobl-config/src/grobl_config/resources/: default_config.toml
grobl-config/tests/: __init__.py
grobl-config/tests/integration/: __init__.py
grobl-config/tests/system/: __init__.py
grobl-config/tests/unit/: __init__.py  test_unit_config.py
grobl/notes/: USABILITY.md  best practices - command line interfaces.md  best practices - interfaces.md
grobl/src/grobl/: __init__.py  binary_probe.py  constants.py  core.py  directory.py  errors.py  file_handling.py  services.py  summary.py  utils.py
grobl/tests/: __init__.py  conftest.py  test_core_behavior.py  test_directory.py  test_errors.py  test_grobl.py  test_property_based_utils.py  test_utils.py  test_utils_param.py
grobl/tests/integration/: __init__.py
grobl/tests/system/: __init__.py  test_system_performance.py
grobl/tests/unit/: __init__.py  test_unit_constants.py  test_unit_core.py  test_unit_file_handling.py  test_unit_services.py  test_unit_summary.py  test_unit_utils.py
notes/: USABILITY.md
scripts/: report_coverage.py
src/grobl/: __init__.py  __main__.py  _version.py  binary_probe.py  cli.py  clipboard.py  config.py  config_defaults.py  config_loading.py  config_runtime.py  constants.py  core.py  directory.py  editor.py  errors.py  file_handling.py  formatter.py  ignore.py  logging_utils.py  main.py  metadata_visibility.py  output.py  provenance.py  renderers.py  services.py  summary.py  token_counting.py  tokens.py  tty.py  utils.py
src/grobl/app/: __init__.py  command_support.py  config_defaults.py  config_loading.py  config_runtime.py  execution.py  explain.py  legacy.py  output_routing.py  root_context.py  scan_command.py  scan_runtime.py
src/grobl/cli/: __init__.py  argv.py  common.py  completions.py  context.py  explain.py  help_format.py  init.py  options.py  root.py  routing.py  runtime.py  scan.py  version.py
src/grobl/resources/: default_config.toml  models.toml
tests/: __init__.py  _workspace_path.py  conftest.py  support.py  test_binary_summary.py  test_cli.py  test_cli_features.py  test_cli_json_output.py  test_cli_more.py  test_clipboard.py  test_config.json  test_config.py  test_core_behavior.py  test_directory.py  test_editor.py  test_error_paths.py  test_errors.py  test_formatter.py  test_main.py  test_mutation_placeholder.py  test_output_precedence.py  test_performance.py  test_property_based_utils.py  test_readme_smoke.py  test_services_scan.py  test_tokens.py  test_tree_trailing_slash.py  test_utils.py  test_utils_more.py  test_version_info.py
tests/component/cli/: test_cli_features.py  test_cli_json_output.py  test_cli_json_payload.py  test_cli_more.py  test_error_paths.py  test_init_config_formatting.py
tests/system/: test_cli.py  test_cli_commands.py  test_cli_determinism.py  test_cli_ignore_config.py  test_cli_injection.py  test_cli_payload_json_schema.py  test_cli_repo_root.py  test_cli_summary_auto_contract.py  test_readme_smoke.py  test_root_injection_contract.py
tests/unit/: test___init__.py  test___main__.py  test_binary_probe.py  test_config.py  test_constants.py  test_core.py  test_directory.py  test_errors.py  test_file_handling.py  test_formatter.py  test_ignore_provenance.py  test_logging_utils.py  test_output.py  test_release_metadata.py  test_renderers.py  test_resources.py  test_services.py  test_summary.py  test_tty.py  test_utils.py
tests/unit/cli/: test_common.py  test_explain.py  test_root_help.py  test_scan.py
tmp/: 1.txt  TODO.md
tmp/a/: 2.txt
tmp/a/d/: 3.txt
