# =================================== project ====================================
[project]
  name = "grobl"
  version = "1.0.34"
  description = "A tool to copy directory structure and file contents as a single string."
  readme = "README.md"
  authors = [
    { name = "Joseph M Courtney", email = "5942706+josephcourtney@users.noreply.github.com" },
  ]
  urls = { "Homepage" = "https://github.com/josephcourtney/grobl", "Bug Tracker" = "https://github.com/josephcourtney/grobl/issues" }
  license = { text = "GPL-3.0-only" }
  classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
  ]
  requires-python = ">=3.12,<3.14"
  dependencies = [
    "click>=8.2.1",
    "pathspec>=0.12.1",
    "pyperclip",
    "rich>=14.2.0",
    "tomlkit>=0.13.2",
  ]


  [project.scripts]
    grobl = "grobl.cli:main"

[dependency-groups]
  dev = [
    "coverage>=7.12.0",
    "diff-cover>=9.7.2",
    "freezegun>=1.5.5",
    "hypothesis>=6.148.6",
    "import-linter>=2.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mutmut>=3.4.0",
    "pip-audit>=2.10.0",
    "pyfakefs>=6.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-freezegun>=0.4.2",
    "pytest-json-report>=1.5.0",
    "pytest-randomly>=4.0.1",
    "pytest-socket>=0.7.0",
    "pytest-test-categories>=1.2.0",
    "pytest-timeout>=2.4.0",
    "radon>=6.0.1",
    "ruff>=0.14.7",
    "rust-just>=1.43.1",
    "setuptools>=80.9.0",
    "showcov>=0.1.4",
    "ty>=0.0.1a31",
    "urllib3>=2.6.0",
    "vulture>=2.14",
    "wily>=1.12.2",
  ]

# =================================== build ====================================
[build-system]
  requires      = ["uv_build>=0.9,<0.10"]
  build-backend = "uv_build"

[tool.uv]
  default-groups = ["dev"]
  [tool.uv.sources]
    showcov  = { git = "https://github.com/josephcourtney/showcov.git", rev = "main" }
    nootnoot = { git = "https://github.com/josephcourtney/nootnoot.git", rev = "main" }

# ==================================== lint ====================================
[tool.ruff]
  extend = "./ruff.default.toml"

  [tool.ruff.lint]
    ignore = [
      "PLC1901", # `s != ""` can be simplified to `s` as an empty string is falsey
      # "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
      # "TD003",  # Missing issue link for this TODO
      # "FIX002", # Line contains TODO, consider resolving the issue
    ]

# ==================================== typecheck ====================================
[tool.ty.src]
  include = [
    "src",
  ]

# =================================== test ===================================
[tool.pytest.ini_options]
  minversion = "8.0"
  testpaths = ["tests"]
  python_files = ["test_*.py"]
  addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",

    # coverage
    "--cov-branch",
    "--cov=grobl",
    "--cov-report=xml",

    # artifacts (structured)
    "--junitxml=.artifacts/pytest-junit.xml",
    "--json-report",
    "--json-report-file=.artifacts/pytest-report.json",
    "--json-report-omit=collectors",
  ]
  timeout = 600
  timeout_method = "thread"
  xfail_strict = true
  log_cli = true
  log_cli_level = "INFO"
  log_cli_format = "%%(asctime)s [%%(levelname)s] %%(name)s - %%(message)s"
  log_cli_date_format = "%%Y-%%m-%%d %%H:%%M:%%S"
  test_categories_enforcement = "fail"
  test_categories_distribution_enforcement = "fail"
  asyncio_mode = "auto"
  filterwarnings = [
    "ignore::DeprecationWarning:some_known_third_party",
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning:pytest_freezegun",
  ]
  markers = [
    "unit: Fast, isolated tests of individual functions/classes. No real I/O.",
    "component: Tests of a subsystem via public APIs; may use local fakes or lightweight real deps.",
    "integration: Tests involving real external dependencies (DB, HTTP APIs, queues).",
    "system: End-to-end tests treating the app as a black box.",
    "contract: Tests of API or schema contracts.",
    "db: Tests that exercise database behaviour or schema.",
    "smoke: Fast, critical-path tests for quick feedback.",
    "slow: Known slow tests.",
    "regression: Guards against previously reported bugs.",
    "property_based: Property-based tests (e.g. Hypothesis).",
    "observability: Tests asserting on logs, metrics, or traces.",
    "security: Security-focused tests.",
    "performance: Performance or performance-regression tests.",
    "data_quality: Tests of data integrity or freshness.",
    "perf: performance tests",

    # ---------------------------------------------------------------------------
    # Size markers (pytest-test-categories)
    # Note: pytest-test-categories auto-registers these, but listing them here keeps
    # them visible in `pytest --markers` and documents local expectations.
    # ---------------------------------------------------------------------------
    "small: Fast, hermetic tests (< 1s).",
    "medium: Tests with local services (< 5 min).",
    "large: End-to-end tests (< 15 min).",
    "xlarge: Extended tests (< 15 min).",

  ]


# =================================== test:coverage ===================================
[tool.coverage.run]
  source   = ["grobl"]
  branch   = true
  parallel = true

[tool.coverage.report]
  show_missing = true
  skip_covered = true
  # Regexes for lines to exclude from consideration
  exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
  ]
  ignore_errors = true

[tool.coverage.xml]
  output = ".coverage.xml"

[tool.mutmut]
  paths_to_mutate = ["src/grobl"]
  tests_dir = ["tests/unit"]
  also_copy = ["src", ".coverage.xml", ".coverage"]
  mutate_only_covered_lines = true
  pytest_add_cli_args = [
    "-m unit",
    "--no-cov",
  ]
