# =================================== project ====================================
[project]
  name = "grobl-cli"
  version = "0.8.0"
  description = "A tool to copy directory structure and file contents as a single string."
  readme = "README.md"
  authors = [
    { name = "Joseph M Courtney", email = "Joseph.M.Courtney@gmail.com" },
  ]
  urls = { "Homepage" = "https://github.com/josephcourtney/grobl-cli", "Bug Tracker" = "https://github.com/josephcourtney/grobl-cli/issues" }
  license = { text = "GPL-3.0-only" }
  classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
  ]
  requires-python = ">=3.12"
  dependencies = [
    "click>=8.2.1",
    "grobl",
    "grobl-config",
    "pathspec>=0.12.1",
    "pyperclip>=1.9.0",
  ]

[dependency-groups]
  dev = [
    "coverage>=7.8.0",
    "hypothesis>=6.138.7",
    "mutmut>=3.3.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.11.7",
    "ty>=0.0.1a22",
  ]

# =================================== build ====================================
[build-system]
  requires      = ["uv_build>=0.9,<0.10"]
  build-backend = "uv_build"

[tool.uv.sources]
  grobl        = { workspace = true }
  grobl-config = { workspace = true }

[tool.ty.environment]
  root = [
    "src",                 # this package
    "../grobl/src",        # CLI (imports grobl and config)
    "../grobl-config/src", # config lib
  ]
